Script Layout Uodate

--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -1311,9 +1311,11 @@ todo
 
 /* #endregion */
 
-/*?             13) My CSS-Styling-Guideline            */
+                                                                                                  /* ====================
+                                                                                                  ?     My CSS-Coding Guideline
+                                                                                                          =====================*/
 
-/* #region CSS-Check/Infolist */ /*                -
+/* #region CSS-Check & Infolist */ /*                -
 
 ?         Umgebung
 
